fix(mobile x): fix mobile overflowing x

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -142,8 +142,8 @@
     display: inline-block;
     width: 300px;
     height: 300px;
-    /* max-width: 500px; */
-    /* max-height: 400px; */
+    max-width: 500px;
+    max-height: 400px;
     padding: 0;
     margin: 0 0px;
 
